--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,3 +1,4 @@
+{{! pagination.hbs }}
 <nav class="pagination" role="navigation">
   {{#if prev}}
   <a class="newer-posts" href="{{page_url prev}}">&larr; Newer Posts</a>
